fixed the weird white space on my ugly table, it was the width.

--- a/stonks_app/static/css/portfolio.css
+++ b/stonks_app/static/css/portfolio.css
@@ -18,10 +18,11 @@ background: white;
 border-radius: 10px;
 max-width: 900px;
 box-shadow: 0 5px 10px rgba(0,0,0, 0.13);
+overflow: hidden;
 }
 
 .ugly-table{
-    width: 90%;
+    width: 100%;
     border-collapse: collapse;
     border-radius: 10px;
     overflow: hidden;
